TEST_PROGRAMS/INVALID/theo_szymkowiak/invalid1.min
# WILL FAIL BECAUSE VAR DECLARED AFTER STATEMENTS

var x: int;

x = 1;

if x then
  print "OK";
endif

var y: int;

